--- a/src/main/FXML.fxml
+++ b/src/main/FXML.fxml
@@ -48,8 +48,8 @@
                   </TitledPane>
               </panes>
             </Accordion>
-            <Label fx:id="errorMessage" />
-            <TextField fx:id="commandLineField" onKeyPressed="#handleEnterPressed" />
+            <Label fx:id="messageLabel" />
+            <TextField fx:id="commandLineField" onKeyPressed="#enterPressed" />
          </children>
          <padding>
             <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
