Add column for Tags

--- a/src/main/FXML.fxml
+++ b/src/main/FXML.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.*?>
 <?import java.lang.*?>
 <?import javafx.scene.control.*?>
@@ -12,20 +13,24 @@
          <children>
             <Accordion prefHeight="735.0" prefWidth="985.0">
               <panes>
-                <TitledPane text="To-Do">
+                <TitledPane prefHeight="557.0" prefWidth="790.0" text="To-Do">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
-                              <TableView fx:id="taskTable" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="445.0" prefWidth="790.0">
+                              <TableView fx:id="taskTable" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="497.0" prefWidth="790.0">
                                 <columns>
                                   <TableColumn fx:id="taskIDCol" prefWidth="46.0" sortable="false" text="ID" />
-                                  <TableColumn fx:id="taskTitleCol" prefWidth="467.0" text="Task Title" />
-                                    <TableColumn fx:id="taskDueDateCol" minWidth="0.0" prefWidth="195.0" text="Due Date" />
-                                    <TableColumn fx:id="taskPriorityCol" maxWidth="75.0" minWidth="72.0" prefWidth="72.0" text="Priority" />
+                                    <TableColumn fx:id="taskTitleCol" prefWidth="276.0" text="Task Title" />
+                                    <TableColumn fx:id="taskDueDateCol" maxWidth="257.0" minWidth="0.0" prefWidth="119.0" text="Due Date" />
+                                  <TableColumn fx:id="taskTagsCol" prefWidth="217.0" text="Tags" />
+                                    <TableColumn fx:id="taskPriorityCol" maxWidth="203.0" minWidth="0.0" prefWidth="116.0" text="Priority" />
                                 </columns>
                               </TableView>
                            </children></AnchorPane>
                   </content>
+                     <font>
+                        <Font name="System Bold" size="15.0" />
+                     </font>
                 </TitledPane>
               </panes>
             </Accordion>
