--- a/src/main/FXML.fxml
+++ b/src/main/FXML.fxml
@@ -13,7 +13,7 @@
          <children>
             <Accordion prefHeight="735.0" prefWidth="985.0">
               <panes>
-                <TitledPane prefHeight="557.0" prefWidth="790.0" text="To-Do">
+                <TitledPane fx:id="toDoPane" prefHeight="557.0" prefWidth="790.0" text="To-Do">
                   <content>
                     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                            <children>
