--- a/src/main/FXML.fxml
+++ b/src/main/FXML.fxml
@@ -11,29 +11,46 @@
    <children>
       <VBox fillWidth="false" prefHeight="600.0" prefWidth="800.0" spacing="5.0">
          <children>
-            <Accordion prefHeight="735.0" prefWidth="985.0">
-              <panes>
-                <TitledPane fx:id="toDoPane" prefHeight="557.0" prefWidth="790.0" text="To-Do">
-                  <content>
-                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
-                           <children>
-                              <TableView fx:id="taskTable" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="497.0" prefWidth="790.0">
-                                <columns>
-                                  <TableColumn fx:id="taskIDCol" prefWidth="46.0" sortable="false" text="ID" visible="false" />
-                                    <TableColumn fx:id="taskTitleCol" prefWidth="276.0" text="Task Title" />
-                                    <TableColumn fx:id="taskDueDateCol" maxWidth="257.0" minWidth="0.0" prefWidth="119.0" text="Due Date" />
-                                  <TableColumn fx:id="taskTagsCol" prefWidth="217.0" text="Tags" />
-                                    <TableColumn fx:id="taskPriorityCol" maxWidth="203.0" minWidth="0.0" prefWidth="116.0" text="Priority" />
-                                </columns>
-                              </TableView>
-                           </children></AnchorPane>
-                  </content>
-                     <font>
-                        <Font name="System Bold" size="15.0" />
-                     </font>
-                </TitledPane>
-              </panes>
-            </Accordion>
+          <TitledPane fx:id="toDoPane" collapsible="false" prefHeight="557.0" prefWidth="790.0" text="To-Do">
+            <content>
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="taskTable" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="497.0" prefWidth="790.0">
+                          <columns>
+                            <TableColumn fx:id="taskIDCol" prefWidth="46.0" sortable="false" text="ID" />
+                              <TableColumn fx:id="taskTitleCol" prefWidth="276.0" text="Task Title" />
+                              <TableColumn fx:id="taskDueDateCol" maxWidth="257.0" minWidth="0.0" prefWidth="119.0" text="Due Date" />
+                            <TableColumn fx:id="taskTagsCol" prefWidth="217.0" text="Tags" />
+                              <TableColumn fx:id="taskPriorityCol" maxWidth="203.0" minWidth="0.0" prefWidth="116.0" text="Priority" />
+                          </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+            </content>
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+          </TitledPane>
+            <TitledPane fx:id="toDoPane1" collapsible="false" layoutX="15.0" layoutY="15.0" prefHeight="557.0" prefWidth="790.0" text="Done">
+               <content>
+                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="taskTable1" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="497.0" prefWidth="790.0">
+                           <columns>
+                              <TableColumn fx:id="taskIDCol1" prefWidth="46.0" sortable="false" text="ID" visible="false" />
+                              <TableColumn fx:id="taskTitleCol1" prefWidth="276.0" text="Task Title" />
+                              <TableColumn fx:id="taskDueDateCol1" maxWidth="257.0" minWidth="0.0" prefWidth="119.0" text="Due Date" />
+                              <TableColumn fx:id="taskTagsCol1" prefWidth="217.0" text="Tags" />
+                              <TableColumn fx:id="taskPriorityCol1" maxWidth="203.0" minWidth="0.0" prefWidth="116.0" text="Priority" />
+                           </columns>
+                        </TableView>
+                     </children>
+                  </AnchorPane>
+               </content>
+               <font>
+                  <Font name="System Bold" size="15.0" />
+               </font>
+            </TitledPane>
             <Label fx:id="messageLabel" prefHeight="21.0" prefWidth="1000.0" />
             <TextField fx:id="commandLineField" onKeyPressed="#onEnterPressed" prefWidth="800.0" />
          </children>
