--- a/src/gui/HelpFXML.fxml
+++ b/src/gui/HelpFXML.fxml
@@ -6,11 +6,8 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<ScrollPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="405.0" prefWidth="297.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8" fx:controller="gui.GUIController">
-  <content>
-    <AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="297.0">
-         <children>
-            <TextArea fx:id="helpTextArea" editable="false" layoutX="1.0" layoutY="-4.0" prefHeight="483.0" prefWidth="297.0" />
-         </children></AnchorPane>
-  </content>
-</ScrollPane>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="471.0" prefWidth="433.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.GUIHelpController">
+   <children>
+      <TextArea fx:id="helpTextArea" editable="false" prefHeight="471.0" prefWidth="433.0" />
+   </children>
+</AnchorPane>
